changed script, added Permission.txt file

--- a/nodejs-parser/package.json
+++ b/nodejs-parser/package.json
@@ -14,7 +14,7 @@
   "author": "Yurii Kobets",
   "license": "MIT",
   "dependencies": {
-    "request": "^2.70.0"
-
+    "request": "^2.70.0",
+    "crawler": "0.4.3"
   }
 }
