--- a/nodejs-parser/package.json
+++ b/nodejs-parser/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "request": "^2.70.0",
-    "crawler": "0.4.3"
+    "crawler": "0.4.3",
+    "node-dir": "1.1.4"
   }
 }
